PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Add check-tests sub-command
pts-core: Fix possible crash on PDF output
pts-core: Make use of systemd-inhibit when available rather than handling screensaver toggling internally
pts-core: Various small fixes and tweaks

Phoronix Test Suite 10.2.0
5 January 2021

pts-core: PHP8 detection improvements
pts-core: For estimated run time, avoid over-calculating time if test has no options but multiple outputs
pts-core: Updated (Open)Mandriva external dependencies
pts_Graph: Minor enhancements
phodevi: Add support for reporting ACPI Platform Profile and INT340x Workload Hint

Phoronix Test Suite 10.2.0 Milestone 3
21 December 2020

pts-core: Add debug-unhandled-dependencies option
pts-core: Default to 2.5% std dev threshold default on new installs
pts-core: BSD external dependency updates
pts-core: Various refinements to the text user interface
pts-core: When a test profile hits a failed download / broken mirror, report that URL to OpenBenchmarking.org
phodevi: Don't restore the Phodevi cache if the /etc/machine-id changed (or /etc/hostname as fallback)

Phoronix Test Suite 10.2.0 Milestone 2
6 December 2020

pts-core: Transition to new JSON-based data format for managing test install metadata while maintaining backwards compatibility with prior XML format
pts-core: Begin tracking test run-times per-hash (all configured test options) for more detailed time tracking and in turn time estimates on subsequent runs
pts-core: Increase compression factor when uploading benchmark results
pts-core: Last minute fixes for PHP 8.0 compatibility
phodevi: Report if CPUFreq Boost enabled/disabled
turbostat: Add TurboStat module to easily generate turbostat dumps on a per-test basis to log files
phoromatic: Much faster web viewer performance especially with large databases

Phoronix Test Suite 10.2.0 Milestone 1
21 November 2020

pts-core: Log lock_stat, config.gz, dmidecode to system logs