@@ -302,7 +302,7 @@ function pts_version_codenames()
 }
 
 pts_define('PTS_VERSION', '10.2.0');
-pts_define('PTS_CORE_VERSION', 10201);
+pts_define('PTS_CORE_VERSION', 10202);
 pts_define('PTS_RELEASE_DATE', '20210105');
 pts_define('PTS_CODENAME', 'Harstad');
 
